# PetriDish

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/Rendering/: Camera.cpp  Camera.h  GUIRenderer.cpp  GUIRenderer.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  TextureLoader.cpp  TextureLoader.h
src/Shaders/: antibiotic.frag  antibiotic.vert  bacteria.frag  bacteria.vert  glow.frag  glow.vert  petridish.frag  petridish.vert  point.frag  point.vert
src/Simulation/: AntibioticEffect.h  Bacteria.cpp  Bacteria.h  BacteriaFactory.h  BacteriaStats.h  BacteriaStatsProvider.h  Coccus.cpp  Coccus.h  IBacteria.h
